# quickfind-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.ja.md  README.md  README.zh-CN.md
desktop/: app.js  index.html  style.css
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/components/: IndexPanel.svelte  ResultList.svelte  ResultRow.svelte  SearchPanel.svelte
frontend/src/lib/: tauri.ts  types.ts
src/: cli.rs  index.rs  lib.rs  main.rs  scanner.rs  search.rs  storage.rs  turso_storage.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/search_engine/: document.rs  fuzzy_match.rs  mod.rs  query.rs  ranking.rs  tokenizer.rs
src/windows_indexer/: index_store.rs  mft_reader.rs  mod.rs  path_resolver.rs  service.rs  usn_watcher.rs  volume_scanner.rs
