[package]
name = "quickfind-desktop"
version = "0.1.1"
edition = "2024"
license = "MIT"

[lib]
name = "quickfind_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
quickfind = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.6.2", features = [] }

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }
